--- a/public/register.html
+++ b/public/register.html
@@ -18,7 +18,7 @@
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12 shadow-lg p-3 mb-5 bg-body rounded">
                         <div class="form">
-                            <h1 class="text-center text-info pt-3"><i class="fa fa-users" aria-hidden="true"></i></h1>
+                            <h1 class="text-center text-info pt-3"><abbr title="Home"><a href="../index.html"><i class="fa fa-users" aria-hidden="true"></i></a></abbr></h1>
                             <div class="form-group mb-0">
                                 <label for="username" class="text-info">Fullname:</label><br>
                                 <input type="text" name="fullname" id="fullname" class="form-control">
@@ -38,14 +38,6 @@
                             <div class="form-group mb-0">
                                 <label for="password" class="text-info">Confirm Password:</label><br>
                                 <input type="password" name="password2" id="password2" class="form-control">
-                            </div>
-                            <div class="form-group mb-0">
-                                <label for="password" class="text-info">What you are?:</label><br>
-                                <select name="role" id="role" class="form-control">
-                                    <option value="0">Select....</option>
-                                    <option value="customer">Customer</option>
-                                    <option value="seller">Seller</option>
-                                </select>
                             </div>
                             <div class="text-center mt-2">
                                 <div class="form-group">
